<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.list.MovieListFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/movie_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/movie_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="@dimen/simple_padding_large"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="@integer/movie_list_span_count"
                tools:listitem="@layout/movie_list_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/movie_empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_movies"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_movie_clapper" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/detail_load_error"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_error"
            tools:visibility="visible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>